add migration folder

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,7 +52,7 @@
     {% endblock %}
     <script>
         function blogfunction(){
-          alert("Your Have 60 seconds to impress all the best")
+          alert("Share yout=r blog")
       }
     </script>
 
