--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -14,7 +14,7 @@
         </div>
       {% endfor %}
       <!-- Login form -->
-      {{wtf.quick_form(login_form)}}
+      {{wtf.quick_form(form)}}
       <p> Don't have an account? <a href="{{url_for('auth.register')}}">Sign up here</a></p>
      </div>
      <div clas="col-md-2"> </div>
