--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,7 +52,7 @@
     {% endblock %}
     <script>
         function blogfunction(){
-          alert("Share yout=r blog")
+          alert("Share your blog with the world")
       }
     </script>
 
