--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,18 @@
       </div>
     </div>
     <div class="col-md-6">
-      <p>QUOTES</p>
+      <h2>QUOTES</h2>
+      {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+          {% for category, message in messages %}
+              <div class="alert alert-{{ category }}">
+                  <p class="text-center">{{ message }}</p>
+              </div>
+          {% endfor %}
+      {% endif%}
+  {% endwith %}
+
+
     </div>
  
   </div>
