--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,16 +18,16 @@
       </div>
     </div>
     <div class="col-md-6">
-      <h2>QUOTES</h2>
+      <h2>Quote Section</h2>
       {% for quote in getquotes %}
 <div class="container" style="padding-top:40px; font-family: 'Viaoda Libre', cursive; color:white;">
     <div class="overlay">
-            <h1 class="text-center " style="color: black"> Quote of the day</h1>
-            <p class="text-center " style="color: purple;">Learn and teach. The world needs to what is in your mind. HERE IS THE CHANCE TO BE HEARD</p>
+            <h1 class="text-center " style="color: #5F9EA0"> Quote of the day</h1>
+            <p id="quot" class="text-center " style="color:#5F9EA0;">Learn and teach. The world needs to what is in your mind. HERE IS THE CHANCE TO BE HEARD</p>
     </div>
         <div id="content" class="card card-image">
             <div class="text-black text-center" style="color:white;">
-                <div class="py-5" style="background-color:black;"> 
+                <div class="py-5" style="background-color:#A52A2A;"> 
                     <h5 class="h5 black-text">A blog is an online journal in which you share your thoughts about a particular subject with readers and subscribers.</h5>
                     <h2 class="card-title h2 my-4 py-2">{{quote.author}}</h2>
                     <p class="mb-4 pb-2 px-md-5 mx-md-5">{{quote.quote}}</p>
